# ChangeLog for dev-perl/math-pari
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/math-pari/ChangeLog,v 1.41 2008/12/21 01:48:05 robbat2 Exp $

  21 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  math-pari-2.010800.ebuild:
  Block the newer sci-mathematics/pari-2.3*.

*math-pari-2.010800 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +math-pari-2.010800.ebuild:
  Version bump.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> math-pari-2.010709.ebuild:
  Stable for HPPA too.

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> math-pari-2.010709.ebuild:
  Stable on x86, bug #169152.

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  math-pari-2.010709.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -math-pari-2.010704.ebuild, math-pari-2.010709.ebuild:
  Marking amd64 stable

*math-pari-2.010709 (07 Nov 2006)

  07 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +math-pari-2.010709.ebuild:
  Version bump

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  math-pari-2.010706.ebuild:
  Stable on hppa

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -math-pari-2.010500-r1.ebuild, -math-pari-2.010603.ebuild,
  math-pari-2.010702.ebuild, -math-pari-2.010702-r1.ebuild,
  math-pari-2.010704.ebuild, math-pari-2.010706.ebuild:
  Marking amd64 stable; cleaning up ebuilds

  10 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  math-pari-2.010706.ebuild:
  Stable on sparc

  13 Aug 2006; Jason Wever <weeve@gentoo.org> math-pari-2.010706.ebuild:
  Fixed up comment formatting on ChrisWhite's correction of my SPARC fixes.

  13 Aug 2006; Chris White <chriswhite@gentoo.org>
  math-pari-2.010706.ebuild:
  Moved use sparc logic to src_compile and out of global scope for bug #143727.

  12 Aug 2006; Jason Wever <weeve@gentoo.org> math-pari-2.010706.ebuild:
  Adjusted machine detection for SPARC as the native SPARC assembly routines