@@ -1,8 +1,10 @@
 AUX math-pari-darwin.patch 308 RMD160 7917402bede0219cc4cb1f345b7ec79f2399bfdd SHA1 03ae12f73f83cc2de0d1dac5f07f5d7b62732f03 SHA256 0f5ea17881b87c90b65e39fa5f4c67eb534c894ef4125e1327c98834aa6db576
 DIST Math-Pari-2.010709.tar.gz 113280 RMD160 d857076dec295a2e3b2c6b7dd98055d31c443bf6 SHA1 91bc43315decb34512c41c3cd9136d8b86f6ee48 SHA256 f64c4d7540b1f67ae3c3b69e0dbb0aaa898c70e1f5519106acf8d63243dbcb9b
 DIST Math-Pari-2.010800.tar.gz 115099 RMD160 40bdec281f6d9fa6fc6c937d3f7f7e0d869a7162 SHA1 785baa00b7cb1ac47030d9afc22cdad825942587 SHA256 d93e8d4150d6671d106eb126ff99cb1a3cd856cf0831abb60e8f7191cfa53f78
+DIST Math-Pari-2.010801.tar.gz 115860 RMD160 72af931cd38b3d2e7bb158bbbe6221292dfe07e1 SHA1 9becc6cbbb80983408de7b3f33e7f19a8015cc34 SHA256 43fa4e64acb3a0285fb750f76924ea78f2c6d2cde1ede71fd60f78953b44eb5a
 DIST pari-2.1.7.tgz 1542137 RMD160 6d7ca649cdd457d96c12e1f9333143d496a78b7e SHA1 dca15bb3ac6dfdcc7934569fe3a65cb16f812a4e SHA256 9142f2cdaf3083c8962f1a5c2bb0e9fe8915f7d9490c03312ac2361c7ea155fa
 EBUILD math-pari-2.010709.ebuild 1464 RMD160 9a819cf367718f0538102c97b1d3295979f54129 SHA1 f55f36de63febe2f8620dc5d46b0f269843d8b60 SHA256 9e907fa192c533bd888d3b6606fc3f3790c56bc32d8f5c21ecb8709896b2874f
 EBUILD math-pari-2.010800.ebuild 1614 RMD160 21849ee87cac3101322c6f712f85ff57cc074ad2 SHA1 259576cb05ab913427c61c3d0b66a23d7034c7f4 SHA256 aba94a3ce52a71b87b583e3316b489e8474d678e568246008ff344a771d7cd5a
-MISC ChangeLog 6232 RMD160 f8ec5abaef21a775faf866402ac33028a2b3f51b SHA1 212c447443e22cfd1898b823dded7d7361cfc522 SHA256 cace64518cdc11489d864373d94f7f8dfc7eb1d7c4d46ad3cb6ba77b78755e70
+EBUILD math-pari-2.010801.ebuild 1614 RMD160 cf8e57a88bbfa826774c5ef7f13c03e12f7f1863 SHA1 ab84f08fc9db3290349dd19b2661cbe8854938ab SHA256 39145df8feb39a0095177b8747014d57926d9b7cf0cfd4e5a311f64df2004fa6
+MISC ChangeLog 6399 RMD160 0581e49983cda47ccc52a73b8589015006fc8850 SHA1 c75124ba1b072182c83fca476e5fab30605697d8 SHA256 3457d2feffb0ad35acb8b24b76510d8e888b85be3876f9c019aad7ec12b54bc7
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
