@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/math-pari
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/math-pari/ChangeLog,v 1.41 2008/12/21 01:48:05 robbat2 Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/math-pari/ChangeLog,v 1.42 2009/02/23 10:05:58 robbat2 Exp $
+
+*math-pari-2.010801 (23 Feb 2009)
+
+  23 Feb 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +math-pari-2.010801.ebuild:
+  Version bump via perl-bump experimental tool.
 
   21 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
   math-pari-2.010800.ebuild:
